--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,195 @@
-html,
-body {
+*{
+  box-sizing: border-box;
+  /* v to remove preset styling */
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  scroll-behavior: smooth;
+}
+
+html,
+body {
+  background: #000;
+  overflow: overlay;
 }
 
 a {
-  color: inherit;
+  color: unset;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.notification-wrapper
+{
+  position: fixed;
+  top: 2%;
+  right: 2%;
+  width: 20%;
+  z-index: 15;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
+.gradient__bg
+{
+  background: radial-gradient(circle at top left, rgba(20, 147, 255, 0.2) 0%, rgba(0, 0, 0, 0.2) 25%, transparent 100%), 
+  radial-gradient(circle at 100% 41%, rgba(20, 147, 255, 0.2)0%, rgba(0, 32, 59, 0.2) 25%, rgba(0, 0, 0, 0.2)100%), 
+  radial-gradient(circle at 0% 66%, rgba(20, 147, 255, 0.1) 0%, rgba(0, 0, 0, 0.1) 25%, transparent 100%);
+}
+
+.section__padding
+{
+  padding: 4rem 5rem;
+}
+
+.section__padding--footer
+{
+  padding: 4rem 5rem 1rem;
+}
+
+.section__margin
+{
+  margin: 4rem 5rem;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0);
+  margin-block: 1em;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  /* margin-right: 1em; */
+  background-color: rgba(20, 147, 255, 0.6);
+}
+
+::-webkit-scrollbar-thumb:window-inactive 
+{
+  background: none;
+}
+
+
+@media screen and (max-width: 850px)
+{
+  .notification-wrapper
+  {
+    width: 30%;
   }
 }
+
+/* viewports */
+@media screen and (max-width: 750px)
+{ /* for tablets */
+  .section__padding
+  {
+    padding: 4rem;
+  }
+
+  .section__padding--footer
+  {
+    padding: 4rem 4rem 1rem;
+  }
+
+  .section__margin
+  {
+    padding: 4rem;
+  }
+}
+
+@media screen and (max-width: 550px)
+{ /* for mobile devices */
+  .section__padding
+  {
+    padding: 4rem 2rem;
+  }
+
+  .section__padding--footer
+  {
+    padding: 4rem 2rem 0.7rem;
+  }
+
+  .section__margin
+  {
+    /* up/down  left/right*/
+    padding: 4rem 2rem;
+  }
+
+  .notification-wrapper
+  {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 350px)
+{
+  .notification-wrapper
+  {
+    width: 50%;
+  }
+}
+
+/* animations */
+.scale-up-center {
+	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+.slide-in-bottom {
+	-webkit-animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+
+
+
+@-webkit-keyframes scale-up-center 
+{
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+@keyframes scale-up-center 
+{
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+ @-webkit-keyframes slide-in-bottom {
+  0% {
+    -webkit-transform: translateY(1000px);
+            transform: translateY(1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-bottom {
+  0% {
+    -webkit-transform: translateY(1000px);
+            transform: translateY(1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+
