--- a/containers/collections/Collections.module.css
+++ b/containers/collections/Collections.module.css
@@ -107,7 +107,7 @@
 {
   /* width: 100%; */
   /* margin-top: 2rem; */
-  padding: 1rem;
+  padding: 1rem 0.5rem 1rem 1rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
@@ -122,6 +122,14 @@
   {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
+  }
+}
+
+@media screen and (max-width: 990px)
+{
+  .apio__collections--grid_container
+  {
+    overflow-y: scroll;
   }
 }
 
