--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,26 +49,38 @@ a {
 }
 
 ::-webkit-scrollbar-track {
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0);
+  /* border-radius: 10px; */
+  /* background-color: rgba(20,88,255,0.6); */
   margin-block: 1em;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 8px;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(20,88,255,0);
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  /* margin-right: 1em; */
+  margin-right: 1em;
   background-color: rgba(20, 147, 255, 0.6);
+} */
+
+
+::-webkit-scrollbar {
+  width: 16px;
 }
 
-::-webkit-scrollbar-thumb:window-inactive 
+::-webkit-scrollbar-thumb {
+  background: rgba(20, 147, 255, 1);
+  border-radius: 10px;
+  background-clip: content-box;
+  border: 6px solid transparent;
+}
+
+/* ::-webkit-scrollbar-thumb:window-inactive 
 {
   background: none;
-}
+} */
 
 
 @media screen and (max-width: 850px)
