--- a/containers/collections/Collections.module.css
+++ b/containers/collections/Collections.module.css
@@ -202,5 +202,6 @@
     /* margin-top: 0.8rem; */
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 0.8rem;
+    max-height: 350px;
   }
 }
