--- a/containers/NFTGrid/NFTGrid.module.css
+++ b/containers/NFTGrid/NFTGrid.module.css
@@ -97,7 +97,7 @@
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
   /* grid-column-gap: 1rem; */
-  grid-auto-rows: minmax(100px, auto);
+  /* grid-auto-rows: minmax(350px, auto); */
 
 }
 
