--- a/containers/NFTGrid/NFTGrid.module.css
+++ b/containers/NFTGrid/NFTGrid.module.css
@@ -92,10 +92,12 @@
 {
   /* width: 100%; */
   /* margin-top: 2rem; */
-  padding: 1rem 0.5rem 1rem 1rem;
+  padding: 1rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
+  max-height: 700px;
+  overflow-y: overlay;
   /* grid-column-gap: 1rem; */
   /* grid-auto-rows: minmax(350px, auto); */
 
@@ -108,8 +110,6 @@
   background: none;
   border-radius: 20px;
   border-style: solid solid none;
-  max-height: 700px;
-  overflow-y: overlay;
   /* padding: 1rem 4rem; */
 }
 
@@ -125,7 +125,7 @@
 
 @media screen and (max-width: 990px)
 {
-  .apio__NFTGrid--grid_container
+  .apio__NFTGrid--grid
   {
     overflow-y: scroll
   }
@@ -189,12 +189,7 @@
     /* margin-top: 0.8rem; */
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 0.8rem;
-    max-height: 350px;
-  }
-
-  .apio__NFTGrid--grid_container
-  {
-    max-height: 350px;
+    height: 350px;
   }
 
 }
