--- a/containers/collections/Collections.module.css
+++ b/containers/collections/Collections.module.css
@@ -98,8 +98,6 @@
   background: none;
   border-radius: 20px;
   border-style: solid solid none;
-  max-height: 600px;
-  overflow-y: overlay;
   /* padding: 1rem 4rem; */
 }
 
@@ -107,10 +105,13 @@
 {
   /* width: 100%; */
   /* margin-top: 2rem; */
-  padding: 1rem 0.5rem 1rem 1rem;
+  padding: 1rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
+  max-height: 600px;
+  overflow-y: overlay;
+  
   /* grid-column-gap: 1rem; */
   /* grid-auto-rows: minmax(100px, auto); */
 }
@@ -127,7 +128,7 @@
 
 @media screen and (max-width: 990px)
 {
-  .apio__collections--grid_container
+  .apio__collections--grid
   {
     overflow-y: scroll;
   }
@@ -202,6 +203,6 @@
     /* margin-top: 0.8rem; */
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 0.8rem;
-    max-height: 350px;
+    height: 350px;
   }
 }
