--- a/containers/NFTGrid/NFTGrid.module.css
+++ b/containers/NFTGrid/NFTGrid.module.css
@@ -90,17 +90,13 @@
 
 .apio__NFTGrid--grid
 {
-  /* width: 100%; */
-  /* margin-top: 2rem; */
-  padding: 1rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
-  max-height: 700px;
+  padding: 1rem;
+  /* margin-right: 0.2em; */
+  max-height: 600px;
   overflow-y: overlay;
-  /* grid-column-gap: 1rem; */
-  /* grid-auto-rows: minmax(350px, auto); */
-
 }
 
 .apio__NFTGrid--grid_container
@@ -110,6 +106,7 @@
   background: none;
   border-radius: 20px;
   border-style: solid solid none;
+  width: unset;
   /* padding: 1rem 4rem; */
 }
 
@@ -186,10 +183,8 @@
 
   .apio__NFTGrid--grid
   {
-    /* margin-top: 0.8rem; */
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 0.8rem;
-    height: 350px;
+    height: 350px; 
   }
 
 }
