--- a/containers/collections/Collections.module.css
+++ b/containers/collections/Collections.module.css
@@ -99,21 +99,19 @@
   border-radius: 20px;
   border-style: solid solid none;
   /* padding: 1rem 4rem; */
+  width: unset;
+
 }
 
 .apio__collections--grid
 {
-  /* width: 100%; */
-  /* margin-top: 2rem; */
-  padding: 1rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
+  padding: 1rem;
+  /* margin-right: 0.2em; */
   max-height: 600px;
   overflow-y: overlay;
-  
-  /* grid-column-gap: 1rem; */
-  /* grid-auto-rows: minmax(100px, auto); */
 }
 
 
@@ -200,9 +198,7 @@
 
   .apio__collections--grid
   {
-    /* margin-top: 0.8rem; */
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 0.8rem;
     height: 350px;
   }
 }
