--- a/containers/collections/Collections.module.css
+++ b/containers/collections/Collections.module.css
@@ -114,6 +114,30 @@
   overflow-y: overlay;
 }
 
+.apio__collections--see_more
+{
+  margin-top: 3rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.apio__collections--see_more_btn
+{
+  padding: 0.6rem 2rem;
+  font-family: var(--font-family);
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 500;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  color: rgba(255, 20, 147, 1);
+  background: rgba(255,255,255,1);
+  cursor: pointer;
+}
+
 
 @media screen and (max-width: 1050px)
 {
