--- a/components/NFTCard/NFTCard.module.css
+++ b/components/NFTCard/NFTCard.module.css
@@ -48,7 +48,7 @@
   color: #fff;
   font-family: var(--font-family);
   font-size: 16px;
-  line-height: 15px;
+  line-height: 1.2;
   font-weight: 500;
   letter-spacing: 0.06em;
   margin-bottom: 0.6rem;
