--- a/containers/header/Header.module.css
+++ b/containers/header/Header.module.css
@@ -43,6 +43,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  cursor: pointer;
 }
 
 .apio__header--image_container--image_frame
